whoops add the new Makefile to the MANIFEST

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 include classylss/_gcl/python/*
 include depends/class.cfg
 include depends/install_class.sh
-include depends/set_classdir.py
+include depends/Makefile
 include classylss/_gcl/include/*
 include classylss/*.py
 include README.rst
