--- a/.travis.yml
+++ b/.travis.yml
@@ -34,11 +34,11 @@ install:
     - conda create --yes -n test python=$TRAVIS_PYTHON_VERSION
     - source activate test
     - conda install --yes numpy=$NUMPY_VERSION astropy "swig>=3.0"
-    - pip install --no-cache-dir classylss
+    - python setup.py install
     
 script:
     - (cd tests; python runtests.py)
-    - bash check_tag.sh classylss/version.py
+    - (cd ..; bash check_tag.sh classylss/version.py)
     
 deploy:
     - provider: pypi
