--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_install:
 install:
     - conda create --yes -n test python=$TRAVIS_PYTHON_VERSION
     - source activate test
-    - conda install --yes numpy=$NUMPY_VERSION astropy "swig>=3.0"
+    - conda install --yes numpy=$NUMPY_VERSION nose astropy "swig>=3.0"
     - python setup.py install
     
 script:
