do not swig sources if the swig-generated files are there already

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,9 @@
-include classylss/_gcl/python/*
+include classylss/gcl_wrap.cpp
+include classylss/gcl.py
+include classylss/_gcl/include/*
+
 include depends/class.cfg
 include depends/install_class.sh
 include depends/Makefile
-include classylss/_gcl/include/*
-include classylss/*.py
 include README.rst
 include LICENSE
