whoops forgot the python files

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include classylss/gcl_wrap.cpp
 include classylss/gcl.py
 include classylss/_gcl/include/*
+include classylss/*py
 
 include depends/class.cfg
 include depends/install_class.sh
