--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,12 @@ cache:
       - $HOME/.cache/pip
       
 env:
-    - NUMPY_VERSION=1.11 OMP_NUM_THREADS=2
-    - WITH_SWIG=true
-    - WITH_SWIG=false
+    global:
+        - NUMPY_VERSION=1.11 
+        - OMP_NUM_THREADS=2
+    matrix:
+        - WITH_SWIG=true
+        - WITH_SWIG=false
   
 before_install:
     - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
