--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,15 @@ install:
     - conda create --yes -n test python=$TRAVIS_PYTHON_VERSION
     - source activate test
     - conda install --yes numpy=$NUMPY_VERSION nose astropy 
-    - if [[ "$WITH_SWIG" == "true" ]]; then conda install --yes "swig>=3.0"; fi
+    - conda install --yes "swig>=3.0"
+    
+    # build the swig extensions (included in pypi dist but have to build here)
+    - python setup.py build_src --inplace
+    
+    # swig not available at install time
+    - if [[ "$WITH_SWIG" == "false" ]]; then conda uninstall --yes swig; fi
+    
+    # install from sdist
     - python setup.py sdist
     - cd dist
     - pip install classylss*
