--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ before_install:
 install:
     - conda create --yes -n test python=$TRAVIS_PYTHON_VERSION
     - source activate test
-    - conda install --yes numpy=$NUMPY_VERSION nose astropy 
+    - conda install --yes numpy=$NUMPY_VERSION nose astropy six
     - conda install --yes "swig>=3.0"
     
     # build the swig extensions (included in pypi dist but have to build here)
