--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ install:
     - source activate test
     - conda install --yes numpy=$NUMPY_VERSION nose astropy six
     - conda install --yes "swig>=3.0"
+    - conda install --yes cython
     
     # build the swig extensions (included in pypi dist but have to build here)
     - python setup.py build_src --inplace
