Add .patch files.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,6 +8,7 @@ include classylss/*.pxd
 
 include depends/class.cfg
 include depends/install_class.sh
+include depends/*.patch
 include depends/Makefile
 include depends/class-v2.6.0.tar.gz
 include README.rst
