--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,6 +5,8 @@ include depends/class.cfg
 include depends/install_class.sh
 include depends/*.patch
 include depends/Makefile
+include depends/Makefile.class
+include depends/copy_data_files
 include depends/class-v2.6.1.tar.gz
 include README.rst
 include LICENSE
