--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -13,13 +13,7 @@ channels:
 
 dependencies:
 - python=3.6
-- numpy
-- cython
-- astropy
-- scipy
-- six
-- gcc
-- libgcc
+- classylss
 - runtests
 - numpydoc
 - pip
