update docs and add examples

--- a/depends/class.cfg
+++ b/depends/class.cfg
@@ -3,7 +3,7 @@
 #-----------------------------------------
 
 # your C compiler:
-CC       = gcc
+CC       = gcc-4.9
 
 # your tool for creating static libraries:
 AR        = ar rv
