make the default friendly with the conda-build compilers.

--- a/depends/class.cfg
+++ b/depends/class.cfg
@@ -2,11 +2,15 @@
 ## set variables for compiling CLASS here
 #-----------------------------------------
 
-# your C compiler:
-CC       = gcc
+# inherited compiler flags from conda
 
-# your tool for creating static libraries:
-AR        = ar rv
+CFLAGS ?= -g -fPIC
+LDFLAGS ?= -g -fPIC
+CC       ?= gcc
+AR        ?= ar
+
+# class uses ar rv
+AR += rv
 
 # your optimization flag
 OPTFLAG = -O4 -ffast-math
@@ -15,5 +19,6 @@ OPTFLAG = -O4 -ffast-math
 OMPFLAG   = #-fopenmp
 
 # all other compilation flags
-CCFLAG = -g -fPIC
-LDFLAG = -g -fPIC
+
+CCFLAG = $(CFLAGS) $(CPPFLAGS)
+LDFLAG = $(LDFLAGS)
