--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: python
 
 python:
-    - 2.7
-    - 3.5
     - 3.6
+    - 3.7
+    - 2.7
 
 addons:
   apt:
@@ -21,11 +21,11 @@ cache:
 
 env:
     global:
-        - NUMPY_VERSION=1.13
+        - NUMPY_VERSION=1.16
         - OMP_NUM_THREADS=2
 
 before_install:
-    - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+    - wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
     - chmod +x miniconda.sh
     - ./miniconda.sh -b -p $HOME/miniconda
     - export PATH=$HOME/miniconda/bin:$PATH
@@ -42,6 +42,9 @@ install:
 script:
     - python run-tests.py
     - bash check_tag.sh classylss/version.py
+
+before_deploy:
+    - rm -rf $HOME/miniconda
 
 deploy:
     - provider: pypi
