Update to class 2.8.2

--- a/depends/Makefile
+++ b/depends/Makefile
@@ -1,4 +1,4 @@
-CLASS_VERSION?=2.6.3
+CLASS_VERSION?=2.8.2
 DEST?=_inst
 
 TARBALL=class-v$(CLASS_VERSION).tar.gz
@@ -15,13 +15,12 @@ $(SRC)/stamp.unzip: $(TARBALL)
 	touch $@
 
 $(SRC)/stamp.patch : $(SRC)/stamp.unzip \
-	  class-2.6.0-a_max.patch \
-	  class-2.6.0-tol-ncdm.patch \
-	  class-2.6.1-pathsize.patch
-	patch -d $(SRC) -p1 < class-2.6.0-a_max.patch || exit 1 
+	  0001-class-2.6.0-a_max.patch \
+	  0002-class-2.6.1-pathsize.patch
+	patch -d $(SRC) -p1 < 0001-class-2.6.0-a_max.patch || exit 1 
 #	No longer needed after 2.6.3
 #	patch -d $(SRC) -p1 < class-2.6.0-tol-ncdm.patch || exit 1
-	patch -d $(SRC) -p1 < class-2.6.1-pathsize.patch || exit 1
+	patch -d $(SRC) -p1 < 0002-class-2.6.1-pathsize.patch || exit 1
 	touch $@
 
 $(SRC)/libclass.a: $(SRC)/stamp.patch class.cfg Makefile
