fix make file syntax

--- a/depends/Makefile
+++ b/depends/Makefile
@@ -18,9 +18,11 @@ $(SRC)/stamp.patch : $(SRC)/stamp.unzip \
 	  0001-class-2.6.0-a_max.patch \
 	  0002-class-2.6.1-pathsize.patch \
 	  0003-Add-FLT_EPSILON-to-array_interpolate_spline.patch
-	for i in $^; do if $$i ~= *.patch; then \
-	patch -d $(SRC) -p1 < $$i || exit 1; fi; \
-	done;
+	for i in $^; do echo $$i; \
+	if [[ $$i == *.patch ]]; then \
+		patch -d $(SRC) -p1 < $$i || exit 1; \
+	fi; \
+	done; \
 	touch $@
 
 $(SRC)/libclass.a: $(SRC)/stamp.patch class.cfg Makefile
